[package]
name = "silver-rs"
version = "0.2.0-dev"
authors = ["Ahmed Mostafa <amk67482@gmail.com>"]

[dependencies]
hyper = { version = "0.12", features = ["runtime"], default-features = false }
http = "0.1"
mime = "0.3"
bytes = "0.4"
tokio = "0.1"
futures = "0.1"
failure = { version = "0.1", features = ["derive"] }
log = "*"
scoped-tls = "*"

[dev-dependencies]
pretty_env_logger = "*"
