[package]
name = "silver-rs"
version = "0.2.0-dev"
authors = ["Ahmed Mostafa <amk67482@gmail.com>"]
license = "MIT"
description = "Fast, safe and asynchrnous web framework"

[dependencies]
hyper = { version = "0.12", features = ["runtime"], default-features = false }
http = "0.1"
mime = "0.3"
bytes = "0.4"
tokio = "0.1"
tokio-tcp = "0.1"
futures = "0.1"
failure = { version = "0.1", features = ["derive"] }
log = "0.4"
scoped-tls = "^1.0"
rustls = { version = "0.15", optional = true }
tokio-rustls = { version = "0.9.2", optional = true }

[target.'cfg(unix)'.dependencies]
tokio-uds = "0.2"

[dev-dependencies]
pretty_env_logger = "0.3"
tokio-io = "0.1"

[features]
default = ["tls"]
tls = ["rustls", "tokio-rustls"]
